[gd_scene load_steps=15 format=3 uid="uid://b0d0sjuqrec70"]

[ext_resource type="Script" uid="uid://c4ettgrp1dfyj" path="res://menu/dead/dead.gd" id="1_0squv"]
[ext_resource type="Shader" uid="uid://30774610ye7" path="res://menu/init_menu/light.gdshader" id="2_x64jl"]
[ext_resource type="Texture2D" uid="uid://bai8gb5ag7yfq" path="res://art_test/SpritesMEGAJAMM/dead.png" id="3_0squv"]
[ext_resource type="Theme" uid="uid://cgk87myhkftnq" path="res://menu/init_menu/menu.tres" id="4_qvywm"]
[ext_resource type="FontFile" uid="uid://br3onpcjd1bh1" path="res://menu/Born2bSportyV2.ttf" id="5_3bp4j"]
[ext_resource type="Shader" uid="uid://70448rx28xc8" path="res://main/dark.gdshader" id="6_mh4dq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_juveg"]
shader = ExtResource("2_x64jl")
shader_parameter/glow_strength = 1.5
shader_parameter/glow_size = 2.0
shader_parameter/glow_color = Vector4(1, 1, 0.8, 1)
shader_parameter/use_sprite_color = true

[sub_resource type="Theme" id="Theme_6nwqt"]
default_font = ExtResource("5_3bp4j")

[sub_resource type="Theme" id="Theme_pbjm4"]
default_font = ExtResource("5_3bp4j")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bc54p"]
shader = ExtResource("6_mh4dq")
shader_parameter/darkness = 0.21
shader_parameter/vignette_strength = 0.75
shader_parameter/vignette_size = 0.299

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_043lm"]

[sub_resource type="Animation" id="Animation_0squv"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Img:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(974, 3.99998), Vector2(974, -1), Vector2(974, 3.99998)]
}

[sub_resource type="Animation" id="Animation_pga4c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Img:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(974, 3.99998)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ewhph"]
_data = {
&"RESET": SubResource("Animation_pga4c"),
&"new_animation": SubResource("Animation_0squv")
}

[node name="Dead" type="Control"]
modulate = Color(1, 1, 1, 0.733333)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0squv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Img" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_juveg")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.996
offset_left = 974.0
offset_top = 3.12295
offset_right = 78.0
offset_bottom = 463.443
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_0squv")

[node name="MenuButton" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 426.0
offset_top = 439.0
offset_right = -1093.0
offset_bottom = -243.0
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Start" type="Button" parent="MenuButton"]
layout_mode = 2
theme = ExtResource("4_qvywm")
theme_override_font_sizes/font_size = 100
text = "RESTART"

[node name="Credit" type="Button" parent="MenuButton"]
layout_mode = 2
theme = SubResource("Theme_6nwqt")
theme_override_font_sizes/font_size = 100
text = "CREDITS"

[node name="Quit" type="Button" parent="MenuButton"]
layout_mode = 2
theme = SubResource("Theme_pbjm4")
theme_override_font_sizes/font_size = 100
text = "QUIT"

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_bc54p")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("NoiseTexture2D_043lm")

[node name="TextureRect2" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_bc54p")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 883.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("NoiseTexture2D_043lm")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 235.0
offset_right = 794.0
offset_bottom = 355.0
theme = ExtResource("4_qvywm")
theme_override_font_sizes/font_size = 120
text = "MUERTE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ewhph")
}
autoplay = "new_animation"

[connection signal="pressed" from="MenuButton/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuButton/Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="MenuButton/Quit" to="." method="_on_quit_pressed"]
